# tabeltekstilo

./: .gitignore  .pre-commit-config.yaml  poetry.lock.license  pyproject.toml  readme.md
indeksilo/: __init__.py  __main__.py  cli.py  indexer.py
tabeltekstilo/: __init__.py  cli.py
tests/: test_cli.py  test_indeksilo.py
